# GodotExtensionExample

./: .gitignore  GDExample2.gd  icon.svg.import  node_2d.tscn  project.godot
gdextension/: CMakeLists.txt
gdextension/include/: gdexample.h
gdextension/src/: gdexample.cpp  math.cpp  register_types.cpp
